# hwal

./: .dev-progress.md  .editorconfig  .env.example  .gitattributes  .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  package.json  tsconfig.json
.anchor/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed  test-ledger-log.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: architecture.md  instructions.md  threat-model.md
examples/: README.md  long-stop-loss.ts  short-take-profit.ts  trailing-stop.ts
migrations/: deploy.ts
programs/chalna/: Cargo.toml  README.md
programs/chalna/idl/: chalna.json
programs/chalna/src/: errors.rs  lib.rs  utils.rs
programs/chalna/src/instructions/: cancel_position.rs  initialize_config.rs  initialize_price_feed.rs  open_position.rs  tick_position.rs  update_config.rs  update_price_feed.rs  update_triggers.rs
programs/chalna/src/state/: config.rs
programs/hwal/: Cargo.toml  README.md
programs/hwal/idl/: hwal.json
programs/hwal/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/hwal/src/instructions/: cancel_position.rs  delegate_position.rs  initialize_config.rs  initialize_price_feed.rs  mod.rs  open_position.rs  register_lazer_feed.rs  tick_position.rs  undelegate_position.rs  update_config.rs  update_price_feed.rs  update_price_feed_from_lazer.rs  update_triggers.rs
programs/hwal/src/state/: mod.rs  position.rs  price_feed.rs
scripts/: deploy-devnet.ps1  keeper-bot.ts  push-price.ts  setup-devnet.ts  smoke-test.ts
security/: VULNERABILITY_REPORT.md
tests/: chalna.ts  hwal.ts
(+5 files in other folders)
