[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hwal core"]
license = "MIT"
rust-version = "1.78"
description = "Hwal: 50ms-precision on-chain trigger engine for Solana"
repository = "https://github.com/Hwaldev/hwal"
readme = "README.md"
keywords = ["solana", "anchor", "trigger", "stop-loss", "magicblock"]
categories = ["cryptography", "network-programming", "finance"]

[workspace.dependencies]
anchor-lang = "0.31.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
